added another project

--- a/my-express-app/public/index.html
+++ b/my-express-app/public/index.html
@@ -23,7 +23,7 @@
             <p class="home-subtitle">Welcome to my portfolio!</p>
             <a href="#about" class="cta-button">Learn More About Me</a>
             <div class="social-buttons">
-                <a href="./images/Resume_Angelo.pdf.pdf" class="social-button" download>
+                <a href="./Resume_Angelo.pdf.pdf" class="social-button" download>
                     <i class="fas fa-file-alt"></i> Resume
                 </a>
                 <a href="https://github.com/Gerrolol" class="social-button" target="_blank">
@@ -39,32 +39,49 @@
             <div class="about-container">
                 <img src="./images/DuxPhoto.jpg" alt="About Me Photo" class="photo">
                 <div class="description">
-                    <p>My name is Angelo and I am currently a Second year Computer Science(Advanced) student at the University of Adelaide</p>
-                    <p>I have a strong passion for Artificial Intelligence and Data Science with experience in Algorithm Design and Data Structures as well as HTML, CSS, JavaScript, and C++.</p>
-                    <p>I am Currently Looking for internship experience as a software Engineer and be able to contirbute to a dynamic team that works on real-world projects.</p>
+                    <p> <strong> I am currently a Second year Computer Science(Advanced) student at the University of Adelaide </strong></p>
+                    <p> I have a strong passion for Artificial Intelligence and Data Science with experience in Algorithm Design and Data Structures as well as <bold> HTML, CSS, JavaScript, and C++ </bold> </p>
+                    <p>Currently, I am Looking for internship experience as a software Engineer and be able to contribute to a dynamic team that works on real-world projects.</p>
                 </div>
             </div>
             <div class="skills-container">
-                <h1>My Skills</h1>
-                <div class="skills">
+                <div class="soft-skills">
+                    <h2>Soft Skills</h2>
+                    <div class="skill">
+                        <div class="skill-name">Communication</div>
+                        <div class="skill-bar">
+                            <div class="skill-level" style="width: 90%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-name">Teamwork</div>
+                        <div class="skill-bar">
+                            <div class="skill-level" style="width: 85%;"></div>
+                        </div>
+                    </div>
+                    <!-- Add more soft skills as needed -->
+                </div>
+                <div class="hard-skills">
+                    <h2>Hard Skills</h2>
                     <div class="skill">
                         <div class="skill-name">JavaScript</div>
-                    </div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 60%;">Intermediate (2 years)</div>
+                        <div class="skill-bar">
+                            <div class="skill-level" style="width: 90%;"></div>
+                        </div>
                     </div>
                     <div class="skill">
                         <div class="skill-name">HTML</div>
-                    </div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 80%;">Advanced (4 years)</div>
+                        <div class="skill-bar">
+                            <div class="skill-level" style="width: 80%;"></div>
+                        </div>
                     </div>
                     <div class="skill">
                         <div class="skill-name">C++</div>
+                        <div class="skill-bar">
+                            <div class="skill-level" style="width: 70%;"></div>
+                        </div>
                     </div>
-                    <div class="skill-bar">
-                        <div class="skill-level" style="width: 80%;">Advanced (4 years)</div>
-                    </div>
+                    <!-- Add more hard skills as needed -->
                 </div>
             </div>
         </section>
@@ -91,22 +108,16 @@
                     <img src="./images/Screenshot 2024-07-21 134637.png" alt="Project 3" class="project-image">
                     <h2>Volunteer Website</h2>
                     <p>Group project demonstrating Front end and Backend development with mysql usage</p>
-                    <a href="#" class="project-link">View Project</a>
+                    <a href="https://github.com/UAdelaide/24S1_WDC_UG_Group_58" class="project-link">View Project</a>
                 </div>
                 <!-- Project Card 4 -->
                 <div class="project-card">
-                    <img src="./images/project4.jpg" alt="Project 4" class="project-image">
-                    <h2>Project Title 4</h2>
-                    <p>Short description of the project.</p>
-                    <a href="#" class="project-link">View Project</a>
+                    <img src="./images/Sudoku.png" alt="Project 4" class="project-image">
+                    <h2>Sudoku Solver</h2>
+                    <p>I implemented a Sudoku solver using backtracking algorithm accompanied with a visualisation using sfml</p>
+                    <a href="https://github.com/Gerrolol/Sudoku" class="project-link">View Project</a>
                 </div>
                 <!-- Project Card 5 -->
-                <div class="project-card">
-                    <img src="./images/project5.jpg" alt="Project 5" class="project-image">
-                    <h2>Project Title 5</h2>
-                    <p>Short description of the project.</p>
-                    <a href="#" class="project-link">View Project</a>
-                </div>
             </div>
         </section>
         <section id="contact">
